# spo

spo3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
spo3/cfg/cfg1/: arr.dot  breakk.dot  fun.dot  statement.dot
spo3/cfg/cfg2/: calc.dot  get_int.dot  main.dot  put_int.dot  put_str.dot  sum.dot
spo3/cfg/cfg3/: put_int.dot
spo3/grammar-spec/: Lab1Grammar.g
spo3/input/input1/: array  empty_func  test  test2
spo3/input/input2/: calc
spo3/libantlr3c-3.4/: Makefile  build-antlr.sh  config.status  libantlr3c.la  libtool
spo3/libantlr3c-3.4/.deps/: antlr3baserecognizer.Plo  antlr3basetree.Plo  antlr3basetreeadaptor.Plo  antlr3bitset.Plo  antlr3collections.Plo  antlr3commontoken.Plo  antlr3commontree.Plo  antlr3commontreeadaptor.Plo  antlr3commontreenodestream.Plo  antlr3convertutf.Plo  antlr3cyclicdfa.Plo  antlr3debughandlers.Plo  antlr3encodings.Plo  antlr3exception.Plo  antlr3filestream.Plo  antlr3inputstream.Plo  antlr3intstream.Plo  antlr3lexer.Plo  antlr3parser.Plo  antlr3rewritestreams.Plo  antlr3string.Plo  antlr3tokenstream.Plo  antlr3treeparser.Plo
spo3/libantlr3c-3.4/.libs/: libantlr3c.lai
spo3/output/output1/: array.dot  empty_func.dot  test.dot  yuko.dot
spo3/output/output2/: main.dot  sum.dot
spo3/output/output3/: print.dot
spo3/src/: ast.c  cfg.c  cfg.h  codegen.h  err_list.h  main.c  parser.h  tables.c  tables.h  type.c  type.h
spo3/vm/: StackVM.pdsl  binary_debug.ptptb  script.sh
spo3/vm/src/: listing.asm
spo5/: CMakeCache.txt  Makefile  cmake_install.cmake  main
spo5/cfg/cfg1/: asd.dot  empty.dot  expr.dot  (+3 more)
spo5/grammar-spec/: Lab1Grammar.g
spo5/libantlr3c-3.4/: Makefile  config.status  libantlr3c.la  libtool
spo5/scheduler_vm_lab/: StackVM_scheduler.pdsl  run_vm.sh
spo5/src/: ast.h  cfg.c  cfg.h  codegen.c  err_list.c  ot.c  ot.h  parser.c  reader.c  reader.h  tables.c  tables.h  type.c  type.h
spo5/vm/: binary_debug.ptptb  out.txt  script.sh  ssl-cfg.yaml
(+50 files in other folders)
